media/base/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - name: sonarr
      port: 8989
      protocol: TCP
      targetPort: sonarr
      appProtocol: http
    - name: metrics
      port: 9707
      protocol: TCP
      targetPort: metrics
      appProtocol: http
  selector:
    deployment: sonarr
  sessionAffinity: None
  type: ClusterIP
