media/base/sonarr/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarr
spec:
  port:
    targetPort: sonarr
  to:
    kind: Service
    name: sonarr
    weight: 100
  wildcardPolicy: None
